# SubJav

./: .gitignore  README.md  pyproject.toml  subjav.toml.example
src/: embed.py  main.py  subtitle.py  transcribe.py  transcribe_qwen3.py  translate.py
